--- a/css/style.css
+++ b/css/style.css
@@ -229,10 +229,12 @@ p {
 /*
  * Flexslider
  */
-#fh5co-home {
+/* #fh5co-home {
   min-height: 700px;
   background: #fff url(../images/loader.gif) no-repeat center center;
-}
+} */
+
+
 #fh5co-home .flexslider {
   border: none;
   position: relative;
